--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # HOST
-VITE_HOST_API=https://api-dev-minimal-v510.vercel.app
+# VITE_HOST_API=https://api-dev-minimal-v510.vercel.app
+VITE_HOST_API=http://localhost:3000
 
 # ASSETS
 VITE_ASSETS_API=https://api-dev-minimal-v510.vercel.app
