--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^10.16.5",
     "highlight.js": "^11.9.0",
     "history": "^5.3.0",
@@ -61,9 +62,14 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-perfectionist": "^2.5.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "vite": "^5.0.0"
   }
 }
