--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.0.0",
+    "money": "^0.2.0",
     "mui-one-time-password-input": "^2.0.1",
     "notistack": "^3.0.1",
     "numeral": "^2.0.6",
