Added: User authentication

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ VITE_HOST_API=http://localhost:3000
 
 # ASSETS
 VITE_ASSETS_API=https://api-dev-minimal-v510.vercel.app
+
+# GOOGLE
+VITE_GOOGLE_API_KEY=AIzaSyCypowEN7iqD6XMJeRED9z0ZZPOU03XsJI
+VITE_GOOGLE_CLIENT_ID_DEV=1011441513222-4dstl5cuc3bbg9b0fh84634mdh7b3km2.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_ID_PROD=1011441513222-4dstl5cuc3bbg9b0fh84634mdh7b3km2.apps.googleusercontent.com
+
