--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # HOST
-# VITE_HOST_API=https://jojooshop.onrender.com
-VITE_HOST_API=http://localhost:3000
+VITE_HOST_API=https://jojooshop-7e8f5d3b4de7.herokuapp.com
+# VITE_HOST_API=https://jojooshop.onrender.com    
+# VITE_HOST_API=http://localhost:3000
 
 # ASSETS
 VITE_ASSETS_API=https://api-dev-minimal-v510.vercel.app
